- handle the absence of portlets better in the UI by covering the whole screen. - correct the .noportlets class ITO the #content fix.
git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@4283 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -225,7 +225,7 @@ a.main_nav_item {
 }
 
 .noportlets #content {
-    left: 0;
+    padding-left: 0;
 }
 
 #content h1
